fix: [Sprint game] add missing color constant to statistics popup

--- a/src/scss/base/_constants.scss
+++ b/src/scss/base/_constants.scss
@@ -22,6 +22,8 @@ $color-transparent-shadow:rgba(0,0,0,0.5);
 $color-green: rgba(0, 128, 0, .9);
 $color-yellow: rgba(255,255,0, .7);
 
+$color-statistics-hover: #E6E6FA;
+
 $desktop-width: 1200px;
 $tablet-width: 767px;
 $mobile-big-width: 414px;
