--- a/src/scss/components/sprintGame/components/_accordion.scss
+++ b/src/scss/components/sprintGame/components/_accordion.scss
@@ -11,7 +11,7 @@
 
   .active,
   &:hover {
-    background-color: $color-statistic-modal;
+    background-color: $color-statistics-hover;
   }
 
   &__panel {
